--- a/src/index.html
+++ b/src/index.html
@@ -7,5 +7,7 @@
 </head>
 <body>
 <div class="app">Hello, Typescript!</div>
+<script src="/dest/namespace/a.js"></script>
+<script src="/dest/namespace/b.js"></script>
 </body>
 </html>
