--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,9 @@
 </head>
 <body>
 <div class="app">Hello, Typescript!</div>
-<script src="/dest/namespace/a.js"></script>
-<script src="/dest/namespace/b.js"></script>
+<!-- <script src="/dest/namespace/a.js"></script>
+<script src="/dest/namespace/b.js"></script> -->
+<script src="/src/libs/global-lib.js"></script>
+<script src="/src//libs/umd-lib.js"></script>
 </body>
 </html>
